--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -28,7 +28,7 @@ jobs:
       with:
         ruby-version: 2.7.1
     - name: Setup Node.js environment
-    - uses: actions/setup-node@v2.1.1
+      uses: actions/setup-node@v2.1.1
       with:
         # Version Spec of the version to use.  Examples: 12.x, 10.15.1, >=10.15.0
         node-version: 12.18.3
