--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -32,6 +32,8 @@ jobs:
       with:
         # Version Spec of the version to use.  Examples: 12.x, 10.15.1, >=10.15.0
         node-version: 12.18.3
+    - name: Delete yarn.lock
+      run: rm yarn.lock
     - name: Install rails
       run: gem install rails
     - name: Install dependencies
