--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
   "version": "0.1.0",
   "devDependencies": {
     "webpack-dev-server": "^3.11.0"
+  },
+  "resolutions": {
+    "webpack-dev-server/**/selfsigned": "^1.10.8"
   }
 }
