Revert "restore cache only when lock file is same"

--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -41,7 +41,7 @@ jobs:
         path: vendor/bundle
         key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile.lock') }}
         restore-keys: |
-          ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile.lock') }}
+          ${{ runner.os }}-gems-
           
     - name: Install rails
       run: gem install rails
